# fiapx_video_processor

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  cloudbuild-api.yml  cloudbuild-worker.yml  codecov.yml
alembic/: env.py
alembic/versions/: 6ebb0ec4f88b_create_video_and_user_tables.py
app/api/: auth.py  users.py  videos.py
app/core/: config.py  security.py
app/models/: user.py  video.py
app/services/: email_service.py  storage_service.py  video_processor.py
app/workers/: celery_worker.py
docker/: Dockerfile  Dockerfile.api  Dockerfile.worker  docker-compose.yml
tests/: conftest.py  test_auth.py  test_users.py  test_video_processor.py  test_videos.py
